--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Annoying Website</title>
     <meta name="description" hid="description" content="An annoying website to kinda ruin your day">
-    <meta name="og:description" hid="og:description" content="An annoying site to kinda ruin your day">
+    <meta name="og:description" hid="og:description" content="An annoying website to kinda ruin your day">
     
-    <meta name="og:title" hid="og:title" property="og:title" content="An annoying site to kinda ruin your day">
-    <meta name="title" hid="title" property="title" content="An annoying site to kinda ruin your day">
+    <meta name="og:title" hid="og:title" property="og:title" content="Annoying Website">
+    <meta name="title" hid="title" property="title" content="Annoying Website">
 
     <meta name="og:url" hid="og:url" property="og:url" content="Annoying Website">
 
