start svelte project

--- a/index.html
+++ b/index.html
@@ -2,24 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="https://dthrcrpz.dev/favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Annoying Website</title>
-    <meta name="description" hid="description" content="An annoying website to kinda ruin your day">
-    <meta name="og:description" hid="og:description" content="An annoying website to kinda ruin your day">
-    
-    <meta name="og:title" hid="og:title" property="og:title" content="Annoying Website">
-    <meta name="title" hid="title" property="title" content="Annoying Website">
-
-    <meta name="og:url" hid="og:url" property="og:url" content="Annoying Website">
-
-    <meta name="og:type" hid="og:type" content="website">
-    <meta name="og:site_name" hid="og:site_name" content="Annoying Website">
-    <meta name="keywords" hid="keywords" content="annoying site, annoying, annoying website, frustrating site, frustrating website">
-    <meta name="format-detection" content="telephone=no">
-    <meta name="og:image" hid="og:image" content="https://dthrcrpz.dev/shibe.png">
-    <meta name="og:image:alt" hid="og:image:alt" content="annoying site">
-    <link rel="canonical" href="https://annoying-website.dthrcrpz.dev">
+    <title>Svelte + Vite App</title>
   </head>
   <body>
     <div id="app"></div>
