--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="og:site_name" hid="og:site_name" content="Annoying Website">
     <meta name="keywords" hid="keywords" content="annoying site, annoying, annoying website, frustrating site, frustrating website">
     <meta name="format-detection" content="telephone=no">
-    <meta name="og:image" hid="og:image" content="https://dthrcrpz.dev/shibe.png">
+    <meta name="og:image" hid="og:image" content="https://annoying-website.dthrcrpz.dev/shibe.png">
     <meta name="og:image:alt" hid="og:image:alt" content="annoying site">
     <link rel="canonical" href="https://annoying-website.dthrcrpz.dev">
   </head>
