--- a/index.html
+++ b/index.html
@@ -2,24 +2,41 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="https://dthrcrpz.dev/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Annoying Website</title>
-    <meta name="description" hid="description" content="An annoying website to kinda ruin your day">
-    <meta name="og:description" hid="og:description" content="An annoying website to kinda ruin your day">
-    
-    <meta name="og:title" hid="og:title" property="og:title" content="Annoying Website">
-    <meta name="title" hid="title" property="title" content="Annoying Website">
 
-    <meta name="og:url" hid="og:url" property="og:url" content="Annoying Website">
+    <!-- Primary Tags -->
+		<title>Annoying Website</title>
+		<meta name="title" content="Annoying Website">
+		<meta name="description" content="An annoying website to kinda ruin your day">
 
-    <meta name="og:type" hid="og:type" content="website">
-    <meta name="og:site_name" hid="og:site_name" content="Annoying Website">
-    <meta name="keywords" hid="keywords" content="annoying site, annoying, annoying website, frustrating site, frustrating website">
-    <meta name="format-detection" content="telephone=no">
-    <meta name="og:image" hid="og:image" content="https://annoying-website.dthrcrpz.dev/shibe.png">
-    <meta name="og:image:alt" hid="og:image:alt" content="annoying site">
-    <link rel="canonical" href="https://annoying-website.dthrcrpz.dev">
+    <!-- OG / Facebook -->
+		<meta property="og:title" content="Annoying Website">
+		<meta property="og:type" content="website">
+		<meta property="og:image" content="/shibe.png">
+		<meta property="og:url" content="https://annoying-website.dthrcrpz.dev">
+		<meta property="og:description" content="An annoying website to kinda ruin your day">
+		<meta property="og:site_name" content="Annoying Website">
+		<meta property="og:image:type" content="image/png">
+		<meta property="og:image:width" content="499">
+		<meta property="og:image:height" content="361">
+		<meta property="og:image:alt" content="Annoying Website">
+		<meta property="og:image:url" content="/shibe.png">
+		<meta property="og:image:secure_url" content="/shibe.png">
+
+    <!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image">
+		<meta property="twitter:url" content="https://annoying-website.dthrcrpz.dev">
+		<meta property="twitter:title" content="Annoying Website">
+		<meta property="twitter:description" content="An annoying website to kinda ruin your day">
+		<meta property="twitter:image" content="/shibe.png">
+
+    <!-- Extras -->
+		<meta name="keywords" content="annoying site, annoying, annoying website, frustrating site, frustrating website">
+		<meta name="format-detection" content="telephone=no">
+		<link rel="canonical" href="https://annoying-website.dthrcrpz.dev">
+
+		<!-- Favicon and fonts -->
+    <link rel="icon" href="/favicon.png" />
   </head>
   <body>
     <div id="app"></div>
